header done, minor fixes, adaptation done

--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
         <nav class="header__nav container">
             <a href="#" class="header__nav-logo"><img src="./imgs/logo.png" alt="logo" class="header__nav-logo-img"></a>
             <ul class="header__nav-list">
-                <li class="header__nav-list-item">HOME</li>
-                <li class="header__nav-list-item">PAGES</li>
+                <li class="header__nav-list-item"><a href="#" class="header__nav-list-item-link">HOME</a></li>
+                <li class="header__nav-list-item"><a href="#" class="header__nav-list-item-link">PAGES</a></li>
                 <li class="header__nav-list-item">
                     <span>PORTFOLIO</span>
                     <img src="./imgs/arrow-down.svg" class="header__nav-list-item-img">
-                    <div class="header__nav-list-item-drop-down">
-                        
-                    </div>
+                    <ul class="header__nav-list-item-drop-down">
+                        <li class="header__nav-list-item-drop-down_item"><a href="#" class="header__nav-list-item-drop-down_item-link">SHOP</a></li>
+                        <li class="header__nav-list-item-drop-down_item"><a href="#" class="header__nav-list-item-drop-down_item-link">FASHION</a></li>
+                        <li class="header__nav-list-item-drop-down_item"><a href="#" class="header__nav-list-item-drop-down_item-link">GALLERY</a></li>
+                    </ul>
                 </li>
-                <li class="header__nav-list-item">BLOG</li>
-                <li class="header__nav-list-item">ABOUT</li>
-                <li class="header__nav-list-item">SHORTCODES</li>
+                <li class="header__nav-list-item"><a href="#" class="header__nav-list-item-link">BLOG</a></li>
+                <li class="header__nav-list-item"><a href="#" class="header__nav-list-item-link">ABOUT</a></li>
+                <li class="header__nav-list-item"><a href="#" class="header__nav-list-item-link">SHORTCODES</a></li>
             </ul>
+            <form class="header__nav-search">
+                <input type="search" placeholder="Search" class="header__nav-search-input">
+                <button class="header__nav-search-btn"><img src="./imgs/search.svg" alt="search"></button>
+            </form>
         </nav>
     </header>
 </body>
