banner done, adaptation done

--- a/index.html
+++ b/index.html
@@ -32,5 +32,15 @@
             </form>
         </nav>
     </header>
+    <main class="main">
+        <section class="main__banner">
+            <img class="main__banner__img" src="./imgs/banner-bg.png" alt="banner">
+            <div class="main__banner__wrap container">
+                <h1 class="main__banner__title">Amazing Shop Layouts</h1>
+                <p class="main__banner__text">Grayson Collection</p>
+                <a href="#" class="main__banner__link">SHOP NOW</a>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
