commerce-section done, adaptation done

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/main.css">
     <title>Grayson</title>
 </head>
+
 <body>
     <header class="header">
         <nav class="header__nav container">
@@ -17,9 +19,12 @@
                     <span>PORTFOLIO</span>
                     <img src="./imgs/arrow-down.svg" class="header__nav-list-item-img">
                     <ul class="header__nav-list-item-drop-down">
-                        <li class="header__nav-list-item-drop-down_item"><a href="#" class="header__nav-list-item-drop-down_item-link">SHOP</a></li>
-                        <li class="header__nav-list-item-drop-down_item"><a href="#" class="header__nav-list-item-drop-down_item-link">FASHION</a></li>
-                        <li class="header__nav-list-item-drop-down_item"><a href="#" class="header__nav-list-item-drop-down_item-link">GALLERY</a></li>
+                        <li class="header__nav-list-item-drop-down_item"><a href="#"
+                                class="header__nav-list-item-drop-down_item-link">SHOP</a></li>
+                        <li class="header__nav-list-item-drop-down_item"><a href="#"
+                                class="header__nav-list-item-drop-down_item-link">FASHION</a></li>
+                        <li class="header__nav-list-item-drop-down_item"><a href="#"
+                                class="header__nav-list-item-drop-down_item-link">GALLERY</a></li>
                     </ul>
                 </li>
                 <li class="header__nav-list-item"><a href="#" class="header__nav-list-item-link">BLOG</a></li>
@@ -41,6 +46,34 @@
                 <a href="#" class="main__banner__link">SHOP NOW</a>
             </div>
         </section>
+        <section class="main__commerce">
+            <div class="main__commerce__wrap container">
+                <div class="main__commerce__cards">
+                    <a href="#" class="main__commerce__cards-card">
+                        <img class="main__commerce__cards-card-img" src="./imgs/commerce1.png" alt="commerce 1">
+                        <h3 class="main__commerce__cards-card-title">Barcelona</h3>
+                    </a>
+                    <a href="#" class="main__commerce__cards-card">
+                        <img class="main__commerce__cards-card-img" src="./imgs/commerce2.png" alt="commerce 2">
+                        <h3 class="main__commerce__cards-card-title">Milano</h3>
+                    </a>
+                    <a href="#" class="main__commerce__cards-card">
+                        <img class="main__commerce__cards-card-img" src="./imgs/commerce3.png" alt="commerce 3">
+                        <h3 class="main__commerce__cards-card-title">Parij</h3>
+                    </a>
+                    <a href="#" class="main__commerce__cards-card">
+                        <img class="main__commerce__cards-card-img" src="./imgs/commerce4.png" alt="commerce 4">
+                        <h3 class="main__commerce__cards-card-title">Rome</h3>
+                    </a>
+                </div>
+                <div class="main__commerce__desc">
+                    <h2 class="main__commerce__desc-title">eCommerce Ready</h2>
+                    <p class="main__commerce__desc-text">Style your products and shop pages, add a cart widget to your header,
+                        and convert clicks into sales.</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
+
 </html>
