--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
                 </div>
             </div>
         </section>
+        <section class="main__collection">
+            <img class="main__collection__img" src="./imgs/collection-bg.png" alt="collection-bg">
+            <div class="main__collection__wrap container">
+                <h3 class="main__collection__title-mini">The Chloe Collection</h3>
+                <h2 class="main__collection__title">The Project Jacket</h2>
+                <a href="#" class="main__collection__link">PURCHASE THEME</a>
+            </div>
+        </section>
     </main>
 </body>
 
