--- a/index.html
+++ b/index.html
@@ -81,6 +81,95 @@
                 <a href="#" class="main__collection__link">PURCHASE THEME</a>
             </div>
         </section>
+        <section class="main__custom">
+            <div class="main__custom__wrap container">
+                <div class="main__custom__desc">
+                    <h2 class="main__custom__desc-title">Highly Customizable</h2>
+                    <p class="main__custom__desc-text">Style your products and shop pages, add a cart widget to your header,
+                        and convert clicks into sales.</p>
+                </div>
+                <div class="main__custom__cards">
+                    <div class="main__custom__cards-card">
+                        <div class="main__custom__cards-card-poster">
+                            <img src="./imgs/custom1.png" alt="custom 1" class="main__custom__cards-card-poster-img">
+                            <div class="main__custom__cards-card-poster-actions">
+                                <button class="main__custom__cards-card-poster-actions_add">
+                                    <img src="./imgs/cart.svg" alt="cart">
+                                    <span>ADD TO CART</span>
+                                </button>
+                                <div class="main__custom__cards-card-poster-actions_like">
+                                    <button class="main__custom__cards-card-poster-actions_like-btn"><img src="./imgs/like.svg" alt="like"></button>
+                                    <button class="main__custom__cards-card-poster-actions_like-btn"><img src="./imgs/watch.svg" alt="watch"></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main__custom__cards-card-desc">
+                            <h3 class="main__custom__cards-card-desc-title">Cotton-Blend-Jacket</h3>
+                            <p class="main__custom__cards-card-desc-text"><span>$48.00</span></p>
+                        </div>
+                    </div>
+                    <div class="main__custom__cards-card">
+                        <div class="main__custom__cards-card-poster">
+                            <img src="./imgs/custom2.png" alt="custom 2" class="main__custom__cards-card-poster-img">
+                            <p class="main__custom__cards-card-poster-status">OUT OF STOCK</p>
+                            <div class="main__custom__cards-card-poster-actions">
+                                <button class="main__custom__cards-card-poster-actions_add">
+                                    <img src="./imgs/cart.svg" alt="cart">
+                                    <span>ADD TO CART</span>
+                                </button>
+                                <div class="main__custom__cards-card-poster-actions_like">
+                                    <button class="main__custom__cards-card-poster-actions_like-btn"><img src="./imgs/like.svg" alt="like"></button>
+                                    <button class="main__custom__cards-card-poster-actions_like-btn"><img src="./imgs/watch.svg" alt="watch"></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main__custom__cards-card-desc">
+                            <h3 class="main__custom__cards-card-desc-title">Multi Pocket Jacket</h3>
+                            <p class="main__custom__cards-card-desc-text"><span>$59.00</span></p>
+                        </div>
+                    </div>
+                    <div class="main__custom__cards-card">
+                        <div class="main__custom__cards-card-poster">
+                            <img src="./imgs/custom3.png" alt="custom 3" class="main__custom__cards-card-poster-img">
+                            <div class="main__custom__cards-card-poster-actions">
+                                <button class="main__custom__cards-card-poster-actions_add">
+                                    <img src="./imgs/cart.svg" alt="cart">
+                                    <span>ADD TO CART</span>
+                                </button>
+                                <div class="main__custom__cards-card-poster-actions_like">
+                                    <button class="main__custom__cards-card-poster-actions_like-btn"><img src="./imgs/like.svg" alt="like"></button>
+                                    <button class="main__custom__cards-card-poster-actions_like-btn"><img src="./imgs/watch.svg" alt="watch"></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main__custom__cards-card-desc">
+                            <h3 class="main__custom__cards-card-desc-title">Velvet Blazer</h3>
+                            <p class="main__custom__cards-card-desc-text"><span>$48.00</span></p>
+                        </div>
+                    </div>
+                    <div class="main__custom__cards-card">
+                        <div class="main__custom__cards-card-poster">
+                            <img src="./imgs/custom4.png" alt="custom 4" class="main__custom__cards-card-poster-img">
+                            <p class="main__custom__cards-card-poster-status">SALE</p>
+                            <div class="main__custom__cards-card-poster-actions">
+                                <button class="main__custom__cards-card-poster-actions_add">
+                                    <img src="./imgs/cart.svg" alt="cart">
+                                    <span>ADD TO CART</span>
+                                </button>
+                                <div class="main__custom__cards-card-poster-actions_like">
+                                    <button class="main__custom__cards-card-poster-actions_like-btn"><img src="./imgs/like.svg" alt="like"></button>
+                                    <button class="main__custom__cards-card-poster-actions_like-btn"><img src="./imgs/watch.svg" alt="watch"></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="main__custom__cards-card-desc">
+                            <h3 class="main__custom__cards-card-desc-title">Cotton-Blend-Jacket</h3>
+                            <p class="main__custom__cards-card-desc-text"><span class="main__custom__cards-card-desc-text-line_through">$48.00</span> <span class="discount-price">$16.00</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
