footer done, adaptation done, minor fixes

--- a/index.html
+++ b/index.html
@@ -171,6 +171,57 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer__wrap">
+            <div class="footer__content container">
+                <div class="footer__content-col">
+                    <h3 class="footer__content-col-title">Customer Services</h3>
+                    <ul class="footer__content-col-list">
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link">Contact Us</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link">Shipping</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link">Click & Collect</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link">Returns</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link">FAQ’s</a></li>
+                    </ul>
+                </div>
+                <div class="footer__content-col">
+                    <h3 class="footer__content-col-title">Customer Assistance</h3>
+                    <ul class="footer__content-col-list">
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link">Track My Orders</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link">Online Returns</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link">Shipping Rates</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link">Returns & Exchanges</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link">International Shipping</a></li>
+                    </ul>
+                </div>
+                <div class="footer__content-col">
+                    <h3 class="footer__content-col-title">Follow Grayson</h3>
+                    <ul class="footer__content-col-list">
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link"><img src="./imgs/face.svg" alt="Facebook">Facebook</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link"><img src="./imgs/twit.svg" alt="Twitter">Twitter</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link"><img src="./imgs/vim.svg" alt="Vimeo">Vimeo</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link"><img src="./imgs/pin.svg" alt="Pinterest">Pinterest</a></li>
+                        <li class="footer__content-col-list-item"><a href="#" class="footer__content-col-list-item-link"><img src="./imgs/youtube.svg" alt="Youtube">Youtube</a></li>
+                    </ul>
+                </div>
+                <div class="footer__content-join">
+                    <h3 class="footer__content-join-title">Join The Club</h3>
+                    <form class="footer__content-join-form">
+                        <input type="email" placeholder="E-mail Address*" class="footer__content-join-form-input">
+                        <button class="footer__content-join-form-btn">JOIN</button>
+                    </form>
+                    <p class="footer__content-join-text">Sign me up to receive emails on new product arrivals, special offers and exclusive events.</p>
+                    <div class="footer__content-join-payment">
+                        <a href="#" class="footer__content-join-payment-link"><img src="./imgs/visa.svg" alt="visa"></a>
+                        <a href="#" class="footer__content-join-payment-link"><img src="./imgs/paypal.svg" alt="paypal"></a>
+                        <a href="#" class="footer__content-join-payment-link"><img src="./imgs/discover.svg" alt="discover"></a>
+                        <a href="#" class="footer__content-join-payment-link"><img src="./imgs/mastercard.svg" alt="mastercard"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="footer__powered">Designed and Powered by <a href="#">ZICO</a></p>
+    </footer>
 </body>
 
 </html>
